--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: ml4sft
+name: ml-sft-trunc
 channels:
   - conda-forge
   - defaults
@@ -13,5 +13,6 @@ dependencies:
   - scikit-learn>=0.23
   - scikit-optimize>=0.7.4
   - scipy
+  - shap>=0.35
   - seaborn>=0.10
   - tensorflow-gpu>=2.0
