Add PyDot as a dependency
Signed-off-by: Riccardo Finotello <riccardo.finotello@gmail.com>

--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - matplotlib>=3.2
   - numpy>=1.18
   - pandas>=1.0
+  - pydot
   - pytables
   - python>=3.6
   - scikit-learn>=0.23
