--- a/environment.yml
+++ b/environment.yml
@@ -3,17 +3,17 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - jupyter_core
-  - lightgbm>=2.0
-  - matplotlib>=3.2
+  - jupyterlab
+  - lightgbm
+  - matplotlib
   - numpy>=1.18
   - pandas>=1.0
   - pydot
-  - pytables
+  - pytables>=3.6.1
   - python>=3.6
-  - scikit-learn>=0.23
-  - scikit-optimize>=0.7.4
+  - scikit-learn
+  - scikit-optimize
   - scipy
-  - shap>=0.35
-  - seaborn>=0.10
+  - shap
+  - seaborn
   - tensorflow-gpu>=2.0
